Fixed code on the following packeges: mixins, listeners, commands, client