@@ -3,6 +3,7 @@ package net.i_no_am.clickcrystals.addon.command;
 import com.mojang.brigadier.arguments.StringArgumentType;
 import com.mojang.brigadier.builder.LiteralArgumentBuilder;
 import io.github.itzispyder.clickcrystals.commands.Command;
+import net.i_no_am.clickcrystals.addon.command.argument.LogFileArgumentType;
 import net.minecraft.command.CommandSource;
 
 import java.io.IOException;
@@ -10,11 +11,10 @@ import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.util.List;
-import java.util.stream.Collectors;
+
+import static net.i_no_am.clickcrystals.addon.command.argument.LogFileArgumentType.LOGS_FOLDER;
 
 public class CleanCommand extends Command {
-
-    private static final String LOGS_FOLDER = "logs";
 
     public CleanCommand() {
         super("clean", "Clean specific lines in chat or logs", "log-cleaner");
@@ -22,89 +22,58 @@ public class CleanCommand extends Command {
 
     @Override
     public void build(LiteralArgumentBuilder<CommandSource> builder) {
-        builder.then(LiteralArgumentBuilder.<CommandSource>literal("chat")
-                .executes(context -> {
-                    mc.inGameHud.getChatHud().clear(true);
-                    return SINGLE_SUCCESS;
-                })
-        ).then(LiteralArgumentBuilder.<CommandSource>literal("logs")
-                .then(argument("content", StringArgumentType.string())
-                        .then(argument("fileName", StringArgumentType.string())
-                                .suggests((context, suggestionsBuilder) -> {
-                                    try {
-                                        List<Path> logFiles = Files.list(Paths.get(LOGS_FOLDER))
-                                                .filter(Files::isRegularFile)
-                                                .filter(file -> !file.getFileName().toString().endsWith(".gz"))
-                                                .toList();
-                                        for (Path file : logFiles) {
-                                            suggestionsBuilder.suggest(file.getFileName().toString());
-                                        }
-                                    } catch (IOException e) {
-                                        e.printStackTrace();
-                                    }
-                                    return suggestionsBuilder.buildFuture();
-                                }).executes(context -> {
-                                    String content = StringArgumentType.getString(context, "content");
-                                    String fileName = StringArgumentType.getString(context, "fileName");
-                                    return cleanLogFile(content, fileName);
-                                })
-                        ).executes(context -> {
-                            String content = StringArgumentType.getString(context, "content");
-                            return cleanAllLogFiles(content);
-                        })
-                )
-        );
+        builder.then(literal("chat").executes(ctx -> {
+            mc.inGameHud.getChatHud().clear(true);
+            return SINGLE_SUCCESS;
+        })).then(literal("logs").then(argument("content", StringArgumentType.string()).executes(ctx -> {
+            String content = StringArgumentType.getString(ctx, "content");
+            return cleanAllLogFiles(content);
+        }).then(argument("fileName", LogFileArgumentType.create()).executes(ctx -> {
+            String content = StringArgumentType.getString(ctx, "content");
+            String fileName = ctx.getArgument("fileName", String.class);
+            return cleanLogFile(content, fileName);
+        }))));
     }
 
     private int cleanLogFile(String lineToRemove, String fileName) {
-        Path logFilePath = Paths.get(LOGS_FOLDER, fileName);
-
-        if (!Files.exists(logFilePath)) {
+        Path path = Paths.get(LOGS_FOLDER, fileName);
+        if (!Files.exists(path)) {
             info("File not found: " + fileName);
-            return COMMAND_PASS;
+            return SINGLE_SUCCESS;
         }
 
         try {
-            List<String> lines = Files.readAllLines(logFilePath);
-            List<String> filteredLines = lines.stream()
-                    .filter(line -> !line.contains(lineToRemove))
-                    .collect(Collectors.toList());
-            int deletedLinesCount = lines.size() - filteredLines.size();
+            List<String> lines = Files.readAllLines(path);
+            List<String> cleaned = lines.stream().filter(line -> !line.contains(lineToRemove)).toList();
 
-            Files.write(logFilePath, filteredLines);
-            info("Removed " + deletedLinesCount + " lines containing \"" + lineToRemove + "\" from " + fileName);
+            Files.write(path, cleaned);
+            info("Removed " + (lines.size() - cleaned.size()) + " lines from " + fileName);
         } catch (IOException e) {
-            e.printStackTrace();
-            info("An error occurred while cleaning the log file.");
+            info("Failed to clean file: " + fileName);
+            system.logger.error("Error while clean file(" + fileName + ")" + "->" + e);
         }
+
         return SINGLE_SUCCESS;
     }
 
     private int cleanAllLogFiles(String lineToRemove) {
+        int totalRemoved = 0;
         try {
-            List<Path> logFiles = Files.list(Paths.get(LOGS_FOLDER))
-                    .filter(Files::isRegularFile)
-                    .filter(file -> !file.getFileName().toString().endsWith(".gz"))
-                    .toList();
+            List<Path> files = Files.list(Paths.get(LOGS_FOLDER)).filter(Files::isRegularFile).filter(p -> !p.getFileName().toString().endsWith(".gz")).toList();
 
-            int totalDeletedLines = 0;
+            for (Path file : files) {
+                List<String> lines = Files.readAllLines(file);
+                List<String> cleaned = lines.stream().filter(line -> !line.contains(lineToRemove)).toList();
 
-            for (Path logFile : logFiles) {
-                List<String> lines = Files.readAllLines(logFile);
-                List<String> filteredLines = lines.stream()
-                        .filter(line -> !line.contains(lineToRemove))
-                        .collect(Collectors.toList());
-
-                int deletedLinesCount = lines.size() - filteredLines.size();
-                totalDeletedLines += deletedLinesCount;
-
-                Files.write(logFile, filteredLines);
-                info("Removed " + deletedLinesCount + " lines containing \"" + lineToRemove + "\" from " + logFile.getFileName());
+                int removed = lines.size() - cleaned.size();
+                totalRemoved += removed;
+                Files.write(file, cleaned);
+                info("Cleaned " + removed + " lines from " + file.getFileName());
             }
-            info("Total lines removed across all files: " + totalDeletedLines);
+            info("Total lines removed: " + totalRemoved);
         } catch (IOException e) {
-            e.printStackTrace();
-            info("An error occurred while cleaning the log files.");
+            info("Error while cleaning log files.");
+            system.logger.error("Error while cleaning log files ->" + e);
         }
         return SINGLE_SUCCESS;
     }
